Fixing the third section to ge align using grid

--- a/slab-data-warehouse/webroot/css/default.css
+++ b/slab-data-warehouse/webroot/css/default.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-width: 1200px;
+width: 1400px;
 height: 4000px;
 background-color: #FFFFFF;
 border: 5px solid black;
