--- a/slab-data-warehouse/webroot/css/footer.css
+++ b/slab-data-warehouse/webroot/css/footer.css
@@ -5,16 +5,13 @@ footer {
   row-gap: 15px;
   width: 1600px;
   height: 761px;
-  left: 0px;
-  top: 3648px;
   border-top: 1px solid;
   margin-inline-start: 10rem;
   background-image: url(../images/Group\ 64.png),
                     url(../images/Logo.jpg);
   background-repeat: no-repeat;
-  background-position: 52% 85%, 0% 34%;
+  background-position: 52% 85%, 0% 36%;
   background-size: 60px 60px, 60px 40px;
-
 }
 footer header {
   display: flex;
@@ -22,6 +19,7 @@ footer header {
   align-items: flex-start;
   flex-wrap: wrap;
   width: 1000px;
+  margin-block-start: 2rem;
 }
 
 
