--- a/slab-data-warehouse/webroot/css/section-3.css
+++ b/slab-data-warehouse/webroot/css/section-3.css
@@ -1,79 +1,128 @@
+body {
+  font-family: Avenir, helvetic, Arial;
+}
+
 .section-3 {
-  width: 1000px;
-  height: 700px;
-  margin-inline-start: 40px;
-  margin-block-start: 2rem;
-  position: relative;
-  background-image: url(../images/image3\ 1.png),
-                    url(../images/image4.png),
-                    url(../images/image5\ 1.png),
-                    url(../images/image6\ 1.png);
-  background-repeat: no-repeat;
-  background-position: 40px 184px,
-                        486px 150px,
-                        40px 430px,
-                        486px 445px;
-  background-size: 200px 200px;
-}
-
-.section-3 header {
-  text-align: center;
-  margin: 2rem;
-  width: 450px;
-  height: 100px;
-  margin-inline-start: 280px;
-}
-
-.section-3 li h3 {
-  margin-block-start: 3rem;
+  width: 1136px;
+  height: 1000px;
+  display: grid;
 }
 
 .section-3 ul {
   display: grid;
-  grid-template-columns: repeat(2, 500px);
-  column-gap: 30px;
+  grid-template-columns: repeat(2, 600px);
+  column-gap: 15px;
   row-gap: 15px;
+}
+
+.feature {
   list-style: none;
+  margin: 2rem;
+  padding-top: 49px;
+  padding-bottom: 33px;
+  padding-left: 172px;
+  margin-left: 102px;
+  padding-right: 50px;
+  background-color: grey;
+  border-radius: 30px;
+  font-size: 16px;
+  position: relative;
 }
 
-.section-3 ul li:nth-of-type(1) {
-   background-color: #68C9BA;
-   opacity: 0.2;
-   padding-inline-start: 10rem;
-   width: 200px;
-   height: 250px;
-   border-radius: 10%;
-   font-size: 0.8rem;
-   margin-inline-start: 5rem;
+.feature::before {
+  content: '';
+  position: absolute;
+  left: -102px;
+  top: 50%;
+  display: block;
+  width: 245px;
+  height: 211px;
 }
-.section-3 li:nth-of-type(2) {
-  background-color: #9C69E2;
-  opacity: 0.2;
-  padding-inline-start: 10rem;
-  width: 200px;
-  height: 250px;
-  border-radius: 10%;
-  font-size: 0.8rem;
+.section-3 header {
+  text-align: center;
+  margin-block-start: 2rem;
 }
 
-
-.section-3 li:nth-of-type(3) {
-  background-color: lightpink;
-  opacity: 0.2;
-  padding-inline-start: 10rem;
-  width: 200px;
-  height: 250px;
-  border-radius: 10%;
-  font-size: 0.8rem;
-  margin-inline-start: 5rem;
+.feture h4 {
+  font-size: 24px;
+  line-height: 50px;
+  font-weight: 400;
+  color: #212353;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
-.section-3 li:nth-of-type(4) {
-  background-color: #2D9CDB;
-  opacity: 0.2;
-  padding-inline-start: 10rem;
-  width: 200px;
-  height: 250px;
-  border-radius: 10%;
-  font-size: 0.8rem;
+.feature p {
+  color: #4B5D68;
+  line-height: 1.6;
+  margin: 0;
+}
+.more-link {
+  padding-block-start: 2rem;
+}
+
+.more-link a {
+  color: #212353;
+  font-weight: 800;
+  text-decoration: none;
+  margin-block-start: 2rem;
+}
+
+.more-link a::after {
+  content: '→';
+  margin-left: 1rem;
+ color: #9C69E2;
+}
+
+#feature_search_data {
+  background-color: rgba(104, 201,  186,0.1);
+}
+#feature_search_data::before {
+  content: '';
+  position: absolute;
+  width: 232px;
+  height: 211px;
+  left: -100px;
+  top: 80px;
+  background-image: url(../images/image3\ 1.png);
+}
+#feature_24_hour_access {
+  background-color: rgba(156, 105,  226, 0.1)
+}
+#feature_24_hour_access::before {
+  content: '';
+  position: absolute;
+  width: 241px;
+  height: 185px;
+  left: -100px;
+  top: 80px;
+  background-image: url(../images/image4.png);
+  background-repeat: no-repeat;
+}
+#feature_print_out {
+  background-color: rgba(240, 99,  184, 0.1);
+}
+#feature_print_out::before {
+  content: '';
+  position: absolute;
+  width: 245px;
+  height: 181px;
+  left: -100px;
+  top: 100px;
+  background-image: url(../images/image5\ 1.png);
+  background-repeat: no-repeat;
+}
+#feature_security_code {
+  background-color: rgba(45, 156,  219, 0.1);
+}
+
+#feature_security_code::before {
+  content: '';
+  position: absolute;
+  width: 230px;
+  height: 201px;
+  left: -100px;
+  top: 80px;
+  background-image: url(../images/image6\ 1.png);
+  background-repeat: no-repeat;
 }
